Got started on testimonials. Will add MDBootstrap for better feedback rating.

--- a/index.html
+++ b/index.html
@@ -65,8 +65,22 @@
           <li class="nav-item">
             <a class="nav-link" href="dog-runs.html">Dog Runs</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="services.html">Services</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Services
+            </a>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+              <a class="dropdown-item" href="ants.html">Ants</a>
+              <a class="dropdown-item" href="bed-bugs.html">Bed Bugs</a>
+              <a class="dropdown-item" href="roaches.html">Cockroaches</a>
+              <a class="dropdown-item" href="fleas.html">Fleas</a>
+              <a class="dropdown-item" href="flies.html">Flies</a>
+              <a class="dropdown-item" href="mosquitoes.html">Mosquitoes</a>
+              <a class="dropdown-item" href="rodents.html">Rodents</a>
+              <a class="dropdown-item" href="hornets.html">Hornets</a>
+              <a class="dropdown-item" href="termites.html">Termites</a>
+              <a class="dropdown-item" href="spiders.html">Spiders</a>
+            </div>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -83,9 +97,6 @@
               <a class="dropdown-item" href="hornets.html">Hornets</a>
               <a class="dropdown-item" href="termites.html">Termites</a>
               <a class="dropdown-item" href="spiders.html">Spiders</a>
-              <a class="dropdown-item" href="portfolio-4-col.html">Other Pests</a>
-
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -96,8 +107,7 @@
               <a class="dropdown-item" href="trapping.html">Info</a>
               <a class="dropdown-item" href="mammals.html">Mammals</a>
               <a class="dropdown-item" href="reptiles.html">Reptiles</a>
-
-              <a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+              <!-- TURN MAMMALS AND REPTILES INTO DROPDOWN SUBMENUS -->
             </div>
           </li>
 
@@ -222,12 +232,6 @@
       </div>
     </div>
 
-
-    <!-- Twitter Feed -->
-    <div class="col-lg-8 mb-4">
-      <a class="twitter-timeline" data-width="250" data-height="200" data-theme="dark" href="https://twitter.com/CalvrtXtermin8r?ref_src=twsrc%5Etfw">Tweets by CalvrtXtermin8r</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> <!--iframe-- width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe-->
-      </div>
-
     <!-- Marketing Icons Section -->
     <div class="row">
       <div class="col-lg-4 mb-4">
@@ -267,55 +271,9 @@
     <!-- /.row -->
 
     <!-- Portfolio Section -->
-    <h2>Most Common Infestations</h2>
+    <h2>How Can We Help?</h2>
 
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('https://placehold.it/1900x1080')">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Got Termites?</h3>
-            <p>We’re receiving many calls for termites! The recent mild winter wasn't enough to cut down on them and now they're in our houses!
-              These pests can cause massive amounts of damage in very little time. A termite queen can live 15 to 25 years and lay an egg every 15 seconds.
-              The average cost in the US to repair termite damage is $3,300, so what are you waiting for? Call us now to save your home and YOUR WALLET!</p>
-          </div>
-        </div>
-        <!-- Slide Two - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('https://placehold.it/1900x1080')">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>Dog runs!</h3>
-            <p>Some infestations require special, more natural intervention.
-              Our dog runs involve the usage of our four humanely trained canine exterminators
-              in the sniffing out of rodents, mosquitoes, bed bugs, and termites.
-              Wherever pests may be, our dogs will find them.</p>
-          </div>
-        </div>
-        <!-- Slide Three - Set the background image for this slide in the line below -->
-        <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
-          <div class="carousel-caption d-none d-md-block">
-            <h3>New contact form!</h3>
-            <p>As part of our website overhaul, a new contact page has been created with convenience in mind,
-              making ordering service as easy as ordering a pizza.
-              Simply follow the prompts to notify us of your needs and we will reply within one business day!</p>
-          </div>
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
-
-    <div class="row">
+    <!--div class="row">
       <div class="col-lg-4 col-sm-6 portfolio-item">
         <div class="card h-100">
           <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
@@ -423,9 +381,69 @@
           </div>
         </div>
       </div>
-    </div>
+    </div-->
     <!-- /.row -->
 
+    <div class="row">
+      <div class="card-group">
+        <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="#">Pest Control</a>
+            </h4>
+            <p class="card-text">We use the most effective solutions to shut down infestations of all pests native to the Maryland, DC, Virginia area.</p>
+            <a href="trapping.html">More</a>
+          </div>
+        </div>
+        <div class="card h-100">
+          <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+          <div class="card-body">
+            <h4 class="card-title">
+              <a href="#">Termite Control</a>
+            </h4>
+            <p class="card-text">Our family will help protect yours and the roof above their heads by ending current infestations and preventing future ones.</p>
+            <a href="trapping.html">More</a>
+          </div>
+        </div>
+      </div>
+      <!-- /.row -->
+
+      <div class="row">
+        <div class="card-group">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Bed Bug Treatment</a>
+              </h4>
+              <!--p class="card-text"></p-->
+            </div>
+          </div>
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Mosquito Control</a>
+              </h4>
+              <!--p class="card-text">Cockroaches live in the kitchens and walls of warm homes, coming out at night to eat any type
+                of food and leaving diseases in their wake.</p-->
+            </div>
+          </div>
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="https://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Wildlife Control</a>
+              </h4>
+              <!--p class="card-text">With over 150 species in the U.S., Mosquitoes come out during warm temperatures of spring and summer.
+                They are host to many diseases due to feeding on a wide range of mammals.</p-->
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.row -->
+    </div>
     <!-- Features Section -->
     <!--div class="row">
       <div class="col-lg-6">
@@ -460,6 +478,73 @@
       </div>
     </div-->
 
+  </div>
+
+  <div class="container">
+    <div class="card text-white bg-secondary my-5 py-4 text-center">
+      <div class="card-body">
+        <h1>Testimonials</h1>
+        <p class="text-white m-0">Keep up to date on our services through our Facebook, Instagram, and Twitter pages!</p>
+      </div>
+    </div>
+    <!-- TESTIMONIALS -->
+    <div class="row">
+      <!--div class="col">
+        <img src="Willie.jpg" alt="Avatar" class="avatar">
+      </div-->
+
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+        <!--Card-->
+        <div class="card testimonial-card">
+          <!--Background color-->
+          <div class="card-up blue-gradient">
+          </div>
+          <!--Avatar-->
+          <div class="avatar mx-auto white">
+            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle img-fluid">
+          </div>
+          <div class="card-body">
+            <!--Name-->
+            <h4 class="font-weight-bold mb-4">Anna Aston</h4>
+            <hr>
+            <!--Quotation-->
+            <p class="dark-grey-text mt-4"><i class="fa fa-quote-left" aria-hidden="true"></i>
+              </i>Neque cupiditate assumenda in
+              maiores repudiandae mollitia architecto.</p>
+          </div>
+        </div>
+        <!--Card-->
+      </div>
+      <!--Grid column-->
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="card text-white bg-secondary my-5 py-4 text-center">
+      <div class="card-body">
+        <h1>Additional Information</h1>
+        <p class="text-white m-0">Keep up to date on our services through our Facebook, Instagram, and Twitter pages!</p>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col">
+        <!-- Twitter Feed -->
+        <div class="col-lg-8 mb-4">
+          <a class="twitter-timeline" data-width="250" data-height="200" data-theme="dark" href="https://twitter.com/CalvrtXtermin8r?ref_src=twsrc%5Etfw">Tweets by CalvrtXtermin8r</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> <!--iframe-- width="100%" height="400px" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe-->
+        </div>
+      </div>
+
+      <div class="col">
+        <!-- Facebook Feed -->
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v7.0" nonce="coWTDskS"></script>
+        <div class="col-lg-8 mb-4">
+          <div class="fb-page" data-href="https://www.facebook.com/CalvertExterminators" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/CalvertExterminators" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/CalvertExterminators">Calvert Exterminators</a></blockquote></div>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- /.container -->
 
