--- a/index.html
+++ b/index.html
@@ -70,16 +70,8 @@
               Services
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-              <a class="dropdown-item" href="ants.html">Ants</a>
-              <a class="dropdown-item" href="bed-bugs.html">Bed Bugs</a>
-              <a class="dropdown-item" href="roaches.html">Cockroaches</a>
-              <a class="dropdown-item" href="fleas.html">Fleas</a>
-              <a class="dropdown-item" href="flies.html">Flies</a>
-              <a class="dropdown-item" href="mosquitoes.html">Mosquitoes</a>
-              <a class="dropdown-item" href="rodents.html">Rodents</a>
-              <a class="dropdown-item" href="hornets.html">Hornets</a>
-              <a class="dropdown-item" href="termites.html">Termites</a>
-              <a class="dropdown-item" href="spiders.html">Spiders</a>
+              <a class="dropdown-item" href="pest-control.html">Pest Control</a>
+              <a class="dropdown-item" href="termite-control.html">Termite Control</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -220,10 +212,9 @@
       </a>
     </div>
   </header>
-
   <!-- Page Content -->
   <div class="container">
-
+    <!----------------------------------------------------------------------!!!!!!!!!!!!!ADD AN AFFIXED BANNER FOR COVID INFO!!!!!!!!!!!!!!!---------------->
     <!-- Call to Action Well -->
     <div class="card text-white bg-secondary my-5 py-4 text-center">
       <div class="card-body">
@@ -498,20 +489,59 @@
         <!--Card-->
         <div class="card testimonial-card">
           <!--Background color-->
-          <div class="card-up blue-gradient">
-          </div>
+          <!--div class="card-up blue-gradient">
+          </div-->
           <!--Avatar-->
           <div class="avatar mx-auto white">
-            <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle img-fluid">
+            <img src="Willie.jpg" alt="Avatar" class="avatar">
           </div>
           <div class="card-body">
             <!--Name-->
-            <h4 class="font-weight-bold mb-4">Anna Aston</h4>
+            <h4 class="font-weight-bold mb-4">Willie</h4>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
             <hr>
             <!--Quotation-->
             <p class="dark-grey-text mt-4"><i class="fa fa-quote-left" aria-hidden="true"></i>
-              </i>Neque cupiditate assumenda in
-              maiores repudiandae mollitia architecto.</p>
+              </i>Dori me
+              Interimo, adapare
+              Dori me
+              Ameno Ameno
+              Latire
+              Latiremo
+              Dori me</p>
+          </div>
+        </div>
+        <!--Card-->
+      </div>
+      <!--Grid column-->
+
+      <!--Grid column-->
+      <div class="col-lg-4 col-md-6 mb-md-0 mb-4">
+        <!--Card-->
+        <div class="card testimonial-card">
+          <!--Background color-->
+          <!--div class="card-up blue-gradient">
+          </div-->
+          <!--Avatar-->
+          <div class="avatar mx-auto white">
+            <img src="dennis.jpg" alt="Avatar" class="avatar">
+          </div>
+          <div class="card-body">
+            <!--Name-->
+            <h4 class="font-weight-bold mb-4">The Golden God</h4>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <span><i class="text-warning fa fa-star"></i></span>
+            <hr>
+            <!--Quotation-->
+            <p class="dark-grey-text mt-4"><i class="fa fa-quote-left" aria-hidden="true"></i>
+              </i>Mm. I have contained my rage for as long as possible, but I shall unleash my fury upon you like the crashing of a thousand waves! Begone, vile man! Begone from me! A starter car? This car is a finisher car! A transporter of gods! The golden god! I am untethered, and my rage knows no bounds! </p>
           </div>
         </div>
         <!--Card-->
