--- a/index.html
+++ b/index.html
@@ -176,10 +176,11 @@
         <!-- Slide One - Set the background image for this slide in the line below -->
         <div class="carousel-item active" style="background-image: url('https://placehold.it/1900x1080')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>Got Termites?</h3>
-            <p>We’re receiving many calls for termites! The recent mild winter wasn't enough to cut down on them and now they're in our houses!
-              These pests can cause massive amounts of damage in very little time. A termite queen can live 15 to 25 years and lay an egg every 15 seconds.
-              The average cost in the US to repair termite damage is $3,300, so what are you waiting for? Call us now to save your home and YOUR WALLET!</p>
+            <h3>New contact form!</h3>
+            <p>As part of our website overhaul, a new contact page has been created with convenience in mind.
+              Simply enter your contact information and choose the type of service needed from the dropdown.
+              Our website will take care of the rest and we will contact you within one business day to set up a time slot!
+            </p>
           </div>
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
@@ -195,10 +196,10 @@
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('http://placehold.it/1900x1080')">
           <div class="carousel-caption d-none d-md-block">
-            <h3>New contact form!</h3>
-            <p>As part of our website overhaul, a new contact page has been created with convenience in mind,
-              making ordering service as easy as ordering a pizza.
-            Simply follow the prompts to notify us of your needs and we will reply within one business day!</p>
+            <h3>Got Termites?</h3>
+            <p>We’re receiving many calls for termites! The recent mild winter wasn't enough to cut down on them and now they're in our houses!
+              These pests can cause massive amounts of damage in very little time. A termite queen can live 15 to 25 years and lay an egg every 15 seconds.
+              The average cost in the US to repair termite damage is $3,300, so what are you waiting for? Call us now to save your home and YOUR WALLET!</p>
           </div>
         </div>
       </div>
