--- a/pest-control.html
+++ b/pest-control.html
@@ -163,6 +163,22 @@
     </div>
     <!-- /.row -->
 
+    <div class="row">
+        <div class="col">
+            <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">HOW MONTHLY PEST CONTROL WORKS:</h3>
+            <h4 class="my-4" style="font-family: Arial Black; color:dodgerblue">FIRST VISIT</h4>
+            <p>One of our friendly technicians will treat the inside and outside of your home and develop a customized plan for protection. </p>
+            <h4 class="my-4" style="font-family: Arial Black; color:dodgerblue">REGULAR VISITS</h4>
+            <p> Pests are always active, so you need protection to stay ahead of them.
+
+                Our custom treatments adapt with the season to address seasonal pest activity in your area, giving you protection all year long.
+
+                We'll come back to re-treat outside your home every season for a total of four treatments, including the initial service.
+
+                And if pests come back, so will we - at no cost to you. It is all a part of our 100% Satisfaction Guarantee.</p>
+        </div>
+    </div>
+
     <!-- Related Projects Row -->
     <h3 class="my-4" style="font-family: Arial Black; color:dodgerblue">COVERAGE INCLUDES:</h3>
 
